about page done

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -7,34 +7,49 @@
     <link rel="stylesheet" href="../css/about_us.css">
 </head>
 <body>
-    <div class="container">
-        <div class="nav-div">          
-            <img src="./../icons/home-page-icon/th-logo.png" class="nav-logo">
-            <ul class="nav-links">
-                <li><a href="./../index.html">HOME</a></li>
-                <li><a href="./pages/menu.html">MENU</a></li>
-                <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
-                <li><a href="./pages/contact_us.html">CONTACT US</a></li>
-                <li><a href="./pages/about_us.html">ABOUT US</a></li>
-                <a href="./pages/login.html"><button class="nav-login">LOGIN</button></a>
-                <a href="./pages/sign-up.html"><button class="nav-sign">SIGN UP</button></a>
-            </ul>
-        </div>
-    </div>
-
-  <center> <h1>ABOUT US </h1></center>
+  <nav>
+    <ul class="sidebar">
+      <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="reservation.html">Reservation</a></li>
+      <li><a href="about_us.html">About</a></li>
+      <li><a href="contact_us.html">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+    <ul>
+      <li ><a href="#">Tasty Heaven</a></li>
+      <li class="hideOnMobile"><a href="../index.html">Home</a></li>
+      <li class="hideOnMobile"><a href="menu.html">Menu</a></li>
+      <li class="hideOnMobile"><a href="reservation.html">Reservation</a></li>
+      <li class="hideOnMobile"><a href="about_us.html">About</a></li>
+      <li class="hideOnMobile"><a href="contact_us.html">Contact</a></li>
+      <li class="hideOnMobile"><a href="login.html">Login</a></li>
+      <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+    </ul>
+</nav>
+<br><br>
+  <center> <h1>ABOUT US </h1></center><br><br>
   <center><div class="image-container">
     <img src="../images/about_us/header1.jpg" alt="Image Name" class="img">
     <div class="image-text"><h2>Tasty Heaven</h2></div>
   </div></center>
-  
+  <br>
+  <br>
   
         <section class="story">
-            <h3>Our Story</h3>
+            <h3>Our Story</h3><br>
             <p>At <b>TASTY HEAVEN</b>, we're passionate about serving more than just food. We're dedicated to creating unforgettable dining experiences that bring people together.</p>
             <p> we're proud to be a part of this vibrant community, serving authentic and delicious cuisine that honors our heritage. Our team is dedicated to providing exceptional service, sourcing high-quality ingredients, and creating a warm and inviting atmosphere that makes every guest feel at home. Join us for dinner, and become a part of our ongoing story to create unforgettable dining experiences!</p>
         </section>
+  <br>
+  <br>
+  <br>
+
        <h3>Food Service</h3>
+  <br>
+  <br>
+
        <div class="card-container">
         <div class="card">
           <img src="../images/about_us/n2.avif" alt="Image 1">
@@ -66,7 +81,9 @@
         </div>
       
       </div>
+      <br><br>
       <h3>Play Our Inserting Game</h3>
+      <br>
 
       <div class="game-container1">
         <div class="card2">
@@ -79,10 +96,16 @@
           </div>
         </div>
       </div>
-    <h3>Meet Our Team</h3>
+  <br>
+  <h3>Meet Our Team</h3><br>
 <p>Our team is dedicated to providing exceptional dining experiences for our guests. Here's a glimpse into the talented individuals who make our restaurant tick</p>
 <p>We're always looking for talented and passionate individuals to join our team. If you're interested in working with us, please submit your application through our website or in person.</p>
-   <h3>Our Expertise</h3>
+  <br>
+  <br>
+  <h3>Our Expertise</h3>
+  <br>
+  <br>
+
    <div class="card-container3">
     <div class="card3">
       <img src="../images/about_us/dining.webp" alt="Image 1">
@@ -113,8 +136,43 @@
       </div>
     </div>
   </div>
-  
-  
+  <br><br><br>
+  <footer>
+    <div class="footer-container-1">
+      <div class="footer-section about">
+        <h2>About Us</h2>
+        <p>we're passionate about serving more than just food. We're dedicated to creating unforgettable dining experiences that bring people together.</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+
+      <div class="footer-section links">
+        <h2>Quick Links</h2>
+        <ul id="quick-links">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="reservation.html">Reservation</a></li>
+          <li><a href="contact_us.html">Contact</a></li>
+          <li><a href="about_us.html">About </a></li>
+          <li><a href="faqs.html">FAQs </a></li>
+        </ul>
+      </div>
+      <div class="footer-section contact">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>Phone: <a href="tel:+1234567890">+123 456 7890</a></p>
+        <p>Address: 123 Street, City, Country</p>                
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>2024 Your Company. All rights reserved.</p>
+    </div>
+</footer>
+
    
     
             <script src="../javascript/about_us.js"></script>
